--- a/index.html
+++ b/index.html
@@ -22,13 +22,23 @@
         </form>
       </nav>
     </header>
+
     <main>
       <section class="current-weather">
-        <h2 class="current-location">Current Location</h2>
-        <div class="current-temperature">0</div>
-        <div class="feels-like">
-          Feels like <span class="feels-like-temperature"></span>
+        <div class="current-weather-left">
+          <h2 class="current-location">Current Location</h2>
+          <div class="current-temperature">0</div>
+          <div class="feels-like">
+            Feels like <span class="feels-like-temperature"></span>
+          </div>
+
+          <div class="temperature-controls" data-temperature-unit="Fahrenheit">
+            <button class="temperature-button selected">Fahrenheit</button>
+            <button class="temperature-button">Celsius</button>
+          </div>
         </div>
+
+        <div class="current-weather-right"></div>
       </section>
     </main>
   </body>
