--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
 
     <main>
       <section class="current-weather">
-        <div class="current-weather-left">
-          <h2 class="current-location">Current Location</h2>
-          <div class="current-temperature">0</div>
-          <div class="feels-like">
-            Feels like <span class="feels-like-temperature"></span>
-          </div>
+        <h2 class="current-location"></h2>
 
-          <div class="temperature-controls" data-temperature-unit="Fahrenheit">
-            <button class="temperature-button selected">Fahrenheit</button>
-            <button class="temperature-button">Celsius</button>
-          </div>
+        <div class="current-weather-description"></div>
+
+        <div class="temperature-controls" data-temperature-unit="Fahrenheit">
+          <button class="temperature-button selected">Fahrenheit</button>
+          <button class="temperature-button">Celsius</button>
         </div>
 
-        <div class="current-weather-right"></div>
+        <div class="current-temperature"></div>
+
+        <div>Feels like <span class="feels-like-temperature"></span></div>
+        <div>Humidity: <span class="humidity"></span></div>
       </section>
     </main>
   </body>
